# OpenJarvis

./: .commitmsg  .env.example  .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRM_FULL_OPERATOR_RECONCILIATION_PR.md  DEPLOYMENT.md  Dockerfile  FLUX.md  MEMBERSHIP_FULL_OPERATOR_RECONCILIATION_PR.md  Makefile  NOTES.md  README.md  ROADMAP.md  ai_blog.txt  alpha_summary.md  api_call.py  api_caller.py  calendar_event.ics  config.json  create_image.py  daily_briefing.md  docker-compose.dev.yml  docker-compose.yml  dockerfile  entrypoint.sh  events.md  fly.toml  humanized_blog.txt  jarvis.bat  jarvis_secrets.py  jarvis_server.py  jarvis_transcription.py  jarvis_voice.html  market_research.md  meeting.ics  meeting_20260414.ics  (+24 more)
.claude-flow/sessions/: session-1781045904420.json  session-1781402849429.json  session-1781427797435.json  session-1781428744922.json  session-1781450375477.json
.claude/agents/: docs-writer.md
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: pearl_model_validation.yml
.github/clone-stats/: badge.json  clone-data.json
.github/workflows/: autotag.yml  ci.yml  claude-issues.yml  claude-review.yml  desktop.yml  docs.yml  frontend.yml  installer-integration.yml  pypi-publish.yml  track-clones.yml
backend/: speech_recognition.py
calendar/: project_sync.ics
config/: database.yml  serena_file_roots.json  server.conf  settings.json
configs/openjarvis/: config.example.toml  config.toml  mcp.servers.example.json
conversion-workspace/accounting-full-operator/: ACCOUNTING-FULL-OPERATOR-CHECKLIST.md  ACCOUNTING-LEGACY-INSPECTION-REPORT.md  legacy-accounting-inspection.json
conversion-workspace/analytics-full-operator/: ANALYTICS-FULL-OPERATOR-CHECKLIST.md  ANALYTICS-LEGACY-INSPECTION-REPORT.md  legacy-analytics-inspection.json
conversion-workspace/batch-1-foundation/: 63-files.js  BATCH-1-CHECKLIST.md
conversion-workspace/bookings-full-operator/: BOOKINGS-FULL-OPERATOR-CHECKLIST.md  BOOKINGS-LEGACY-INSPECTION-REPORT.md  legacy-bookings-inspection.json
conversion-workspace/compliance-full-operator/: COMPLIANCE-FULL-OPERATOR-CHECKLIST.md  COMPLIANCE-LEGACY-INSPECTION-REPORT.md  legacy-compliance-inspection.json
conversion-workspace/documents-full-operator/: DOCUMENTS-FULL-OPERATOR-CHECKLIST.md  legacy-documents-inspection.json
conversion-workspace/files-full-operator/: FILES-FULL-OPERATOR-CHECKLIST.md  legacy-files-inspection.json
conversion-workspace/gdrive-full-operator/: GDRIVE-FULL-OPERATOR-CHECKLIST.md  GDRIVE-LEGACY-INSPECTION-REPORT.md  legacy-gdrive-inspection.json
conversion-workspace/github-full-operator/: GITHUB-FULL-OPERATOR-CHECKLIST.md  legacy-github-inspection.json
conversion-workspace/google-calendar-full-operator/: GOOGLE-CALENDAR-FULL-OPERATOR-CHECKLIST.md  GOOGLE-CALENDAR-LEGACY-INSPECTION-REPORT.md  legacy-calendar-inspection.json
conversion-workspace/google-docs-full-operator/: GOOGLE-DOCS-FULL-OPERATOR-CHECKLIST.md  GOOGLE-DOCS-LEGACY-INSPECTION-REPORT.md  legacy-google-docs-inspection.json
conversion-workspace/health-monitor-full-operator/: HEALTH-MONITOR-FULL-OPERATOR-CHECKLIST.md  legacy-health-monitor-inspection.json
conversion-workspace/membership-full-operator/: MEMBERSHIP-FULL-OPERATOR-CHECKLIST.md  MEMBERSHIP-LEGACY-INSPECTION-REPORT.md  REMAINING-LEGACY-MERGE-SCAN.md  legacy-membership-inspection.json  remaining-legacy-merge-scan.json
conversion-workspace/ocr-live-vision-full-operator/: OCR-LEGACY-INSPECTION-REPORT.md  OCR-LIVE-VISION-FULL-OPERATOR-CHECKLIST.md  legacy-ocr-inspection.json
dashboard/: index.html
deploy/: ci-code-quality.yml  ci-unit-tests.yml  deploy.sh  flux-online.md  health-check.sh  kubernetes-manifests.yml  prometheus.yml
deploy/docker/: Dockerfile  (+4 more)
desktop/: package-lock.json
docs/: FRIDAY_TASK_BACKLOG.md  LOCAL_STT.md  LOCAL_TTS.md  MAC_APP_BUILD.md  TOKEN_SAVING_WORKFLOW.md  TTS_OPTIONS.md  desktop-auto-update.md  downloads.md  gen_install_script.py  index.md  leaderboard.md  telemetry.md
emails/: 2024_01_15_project_alpha_initiation.txt  2024_01_22_budget_approval.txt
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
inbox/: email_01.txt  email_02.txt  email_03.txt  email_05.txt
memory/: memory.py
research/: api_integration.md  market_research.md  summary_source.txt  triage_report.md
rust/: Cargo.toml
rust/crates/openjarvis-python/: Cargo.toml  pyproject.toml
rust/crates/openjarvis-python/src/: agents.rs  engine.rs  learning.rs  lib.rs  scheduler.rs  security.rs  skills.rs  storage.rs  telemetry.rs  tools.rs
rust_demo/: Cargo.toml
scripts/: apply_data_boundary_scan_patch.ps1  check-no-secrets.sh  diagnose-speech.ps1  fix-mic.ps1  friday-startup.sh  google_refresh_token_full_scope.py  jarvis-agent-code-review-watch.sh  jarvis-agent-local-research.sh  jarvis-agent-research-monitor.sh  jarvis-code.sh  jarvis-digest.sh  jarvis-general.sh  jarvis-research.sh  oauth_all.py  openclaw-health-summary.sh  openclaw-management-check.sh  openclaw-openjarvis-chat.sh  patch_hub_batch1_cli_registration.py  patch_hub_batch1_cli_registration_v2.py  patch_hub_batch1_foundation.py  patch_hub_batch2_preserve_state.py  patch_hub_batch2_state_web.py  patch_hub_batch3_dynamic_web.py  patch_hub_batch3_layout_polish.py  patch_hub_batch4_live_tick_sync_fix.py  patch_hub_batch4_live_updates.py  patch_hub_batch5_command_bridge.py  patch_hub_batch6_approval_workflow.py  patch_hub_batch7_execution_runner_scaffold.py  patch_hub_batch8_patch_prep_scaffold.py  patch_hub_batch9_final_patch_execution_gate.py  pi-openclaw.sh  publish_results.py  quickstart.sh  restart-server.ps1  run-local.sh  setup-energy-monitor.sh  setup_flux.sh  setup_webchorearena.sh  smoke_framework_comparison.sh  (+4 more)
tests/: conftest.py  rust_shim.py  test_datautils.py  test_digest_integration.py  test_integration_extended.py  test_personal_synthesizer.py  test_rust_bridge.py  test_search_space.py  test_trace_judge.py
(+1738 files in other folders)
