[package]
name = "openjarvis-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "openjarvis_rust"
crate-type = ["cdylib"]

[dependencies]
openjarvis-core = { path = "../openjarvis-core" }
openjarvis-engine = { path = "../openjarvis-engine" }
openjarvis-security = { path = "../openjarvis-security" }
openjarvis-tools = { path = "../openjarvis-tools" }
openjarvis-agents = { path = "../openjarvis-agents" }
openjarvis-traces = { path = "../openjarvis-traces" }
openjarvis-telemetry = { path = "../openjarvis-telemetry" }
openjarvis-learning = { path = "../openjarvis-learning" }
openjarvis-mcp = { path = "../openjarvis-mcp" }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
